# grantami-system

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  LICENSE  NOTICE  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml
.github/scripts/: check_server.py
.github/workflows/: ci_cd.yml  dependabot_approve.yml  label.yml  server_checks.yml
.ipython/profile_default/startup/: 10-monkeypatch-connection.py  20-define-plotly-renderer.py
doc/: Makefile  make.bat
doc/changelog.d/: 1.added.md  10.changed.md  11.changed.md  12.miscellaneous.md  123.maintenance.md  155.maintenance.md  23.documentation.md  23.miscellaneous.md  25.documentation.md  34.dependencies.md  4.added.md  4.miscellaneous.md  40.added.md  41.miscellaneous.md  41.test.md  44.miscellaneous.md  48.maintenance.md  5.dependencies.md  55.documentation.md  59.miscellaneous.md  79.miscellaneous.md  8.miscellaneous.md  81.miscellaneous.md  86.dependencies.md  87.maintenance.md  9.miscellaneous.md  90.documentation.md  91.dependencies.md  93.dependencies.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/api/: connection.rst  index.rst  models.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
examples/: 00_basic_usage.py  01_processing_activity_data.py  1_Basic_usage.py  index.rst  test_example.py
examples/1_Activity/: 2-1_Access_activity_report.py  2-2_Process_activity_report.py  2-3_Anonymize_activity_report.py  index.rst
examples/activity/: 00_access_activity_log.py  01_process_activity_logs.py
src/ansys/grantami/system/: __init__.py  _connection.py  _logger.py  _models.py
tests/: __init__.py  activity_log_filter_parameters.py  common.py  conftest.py  test_client.py  test_connection.py  test_import.py  test_integration.py  test_integration_unsupported_mi.py  test_models.py  test_paged_result.py
version/: index.html
version/1.0/: index.html  objects.inv
version/1.0/_downloads/6a02ba8c89102fef7eb4472745c140a8/: 2-2_Process_activity_report.py
version/1.0/_downloads/bc20a7ab62cb7c4a75e32889ddea43e8/: 2-1_Access_activity_report.py
version/1.0/_downloads/d0e72b552bdb5dcdaa7fb387a8d8bdb4/: 2-1_Access_activity_report.ipynb
version/1.0/_sources/examples/: index.rst.txt
version/1.0/_sources/examples/1_Activity/: 2-2_Process_activity_report.ipynb.txt  2-3_Anonymize_activity_report.ipynb.txt
version/1.0/_static/: search.json
version/1.0/examples/: 1_Basic_usage.html  1_Basic_usage.ipynb  index.html
version/1.0/examples/1_Activity/: 2-1_Access_activity_report.html  2-1_Access_activity_report.ipynb  2-3_Anonymize_activity_report.html  2-3_Anonymize_activity_report.ipynb
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_downloads/15ba877c4740047e9516f1b0f28ed6fc/: 2-3_Anonymize_activity_report.ipynb
version/dev/_downloads/9e825b108b5f5855ba93e9ebbb6b2bb8/: 1_Basic_usage.ipynb
version/dev/_downloads/d0e72b552bdb5dcdaa7fb387a8d8bdb4/: 2-1_Access_activity_report.ipynb
version/dev/_downloads/e6c34f1f9f698b7ff0e8d5883e39b518/: 2-2_Process_activity_report.ipynb
version/dev/_sources/examples/: 1_Basic_usage.ipynb.txt
version/dev/_sources/examples/1_Activity/: 2-1_Access_activity_report.ipynb.txt  2-2_Process_activity_report.ipynb.txt  2-3_Anonymize_activity_report.ipynb.txt
version/dev/_sources/getting_started/: index.rst.txt
version/dev/_static/: documentation_options.js  search.json
version/dev/api/: connection.html  index.html  models.html
version/dev/examples/: 1_Basic_usage.html  1_Basic_usage.ipynb  index.html
version/dev/examples/1_Activity/: 2-1_Access_activity_report.html  2-1_Access_activity_report.ipynb  2-3_Anonymize_activity_report.html  2-3_Anonymize_activity_report.ipynb  index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: changelog.html  contributing.html  genindex.html  index.html  search.html  searchindex.js
version/stable/_downloads/827f665453420a239228fabf7ca5f66c/: 1_Basic_usage.py
version/stable/_downloads/9e825b108b5f5855ba93e9ebbb6b2bb8/: 1_Basic_usage.ipynb
version/stable/_sources/: index.rst.txt
version/stable/_sources/api/: connection.rst.txt
version/stable/_sources/user_guide/: index.rst.txt
version/stable/api/: connection.html  index.html  models.html
version/stable/examples/1_Activity/: index.html
version/stable/getting_started/: index.html
version/stable/user_guide/: index.html
